cv and email links

--- a/z2.html
+++ b/z2.html
@@ -22,7 +22,7 @@
         <div class="mx-4 mt-4">
             <a href="https://www.linkedin.com/in/mohamed-khalid-rouibaa-601411343/" target="_blank"><img src="images/download (1).png" style="height:30px;margin-bottom:20px;"></a>
             <br>
-            <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="images/325a4bd7b5041b4455e9a0b64c92190d.jpg" style="height:30px;margin-bottom:20px;"></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rouibaa.khalid05@gmail.com" target="_blank"><img src="images/325a4bd7b5041b4455e9a0b64c92190d.jpg" style="height:30px;margin-bottom:20px;"></a>
             <br>
             <a href="https://www.instagram.com/khalid_roui4/" target="_blank"><img src="images/Instagram Icon New Black Background Vector Logo - Instagram - Free Transparent PNG Download - PNGkey.jpeg" style="height:30px;margin-bottom:20px;"></a>
             <p>copyright ©2025 mohamed khalid rouibaa. all right saved</p>
@@ -37,7 +37,7 @@
                 <img src="images/free-user-icon-3296-thumb (1).png" alt="err" width="300px" class="mt-5">
                 <h2 class="name text-uppercase fw-bold mt-4">mohamed khalid rouibaa</h2>
                 <p><strong><em>developer full stack</em></strong> based in <strong><em>morocco</em></strong></p>
-                <a href="#" class="download">Download CV
+                <a href="CV.pdf" download="Med Khalid's cv" class="download">Download CV
                     <img src="images/Capture d'écran 2025-09-12 111409.png" alt="err">
                 </a>
             </div>
@@ -82,7 +82,7 @@
       Hello there! My name is Mohamed Khalid Rouibaa.<br>
       I am a web designer & developer, and I'm very passionate and dedicated to my work.
     </p>
-    <a href="#" class="resa  mt-3">
+    <a href="CV.pdf" download="Med Khalid's cv" class="resa  mt-3">
       Download my resume 
       <img src="images/Screenshot 2025-09-15 014952.png" width="20" class="ms-2" alt="icon">
     </a>
