--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="mx-4 mt-4">
             <a href="https://www.linkedin.com/in/mohamed-khalid-rouibaa-601411343/" target="_blank"><img src="images/download (1).png" style="height:30px;margin-bottom:20px;"></a>
             <br>
-            <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="images/325a4bd7b5041b4455e9a0b64c92190d.jpg" style="height:30px;margin-bottom:20px;"></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rouibaa.khalid05@gmail.com" target="_blank"><img src="images/325a4bd7b5041b4455e9a0b64c92190d.jpg" style="height:30px;margin-bottom:20px;"></a>
             <br>
             <a href="https://www.instagram.com/khalid_roui4/" target="_blank"><img src="images/Instagram Icon New Black Background Vector Logo - Instagram - Free Transparent PNG Download - PNGkey.jpeg" style="height:30px;margin-bottom:20px;"></a>
             <p>copyright ©2025 mohamed khalid rouibaa. all right saved</p>
@@ -36,7 +36,7 @@
         <h1 class="fw-bold display-4">MY NAME <br> IS <span class="text-gradient">Mohamed Khalid</span><br><span class="text-gradient">Rouibaa</span>...</h1>
         <p class="lead" style="font-size: 30px; font-weight: 400"><strong><em>Product Designer</em></strong> based in Morocco</p>
         
-        <a href="file:///C:/Users/dell/Desktop/ROUIBAA%20MOHAMED-KHALID%20CV.pdf" target="_blank" class="resa  mt-3">
+        <a href="CV.pdf" download="med_khalid.pdf" class="resa  mt-3">
       Download my resume 
       <img src="images/Screenshot 2025-09-15 014952.png" width="20" class="ms-2" alt="icon">
     </a>
