--- a/z5.html
+++ b/z5.html
@@ -22,7 +22,7 @@
         <div class="mx-4 mt-4">
             <a href="https://www.linkedin.com/in/mohamed-khalid-rouibaa-601411343/" target="_blank"><img src="images/download (1).png" style="height:30px;margin-bottom:20px;"></a>
             <br>
-            <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><img src="images/325a4bd7b5041b4455e9a0b64c92190d.jpg" style="height:30px;margin-bottom:20px;"></a>
+            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=rouibaa.khalid05@gmail.com" target="_blank"><img src="images/325a4bd7b5041b4455e9a0b64c92190d.jpg" style="height:30px;margin-bottom:20px;"></a>
             <br>
             <a href="https://www.instagram.com/khalid_roui4/" target="_blank"><img src="images/Instagram Icon New Black Background Vector Logo - Instagram - Free Transparent PNG Download - PNGkey.jpeg" style="height:30px;margin-bottom:20px;"></a>
             <p>copyright ©2025 mohamed khalid rouibaa. all right saved</p>
